# 5gframework

./: .cproject  .project  Makefile.am  README.md  acinclude.m4  bootstrap.sh  configure.ac  modules.conf  src.tar
conf/default/: agc.yml  event_socket.yml  hiredis.yml  logconf.yml  modules.yml  mq_consumer_default.yml  mq_producer_default.yml
conf/default/mq_profiles/: mq_consumer_config.yml  mq_consumer_default.yml  mq_producer_default.yml
libs/apr/: configure
libs/apr/memory/unix/: apr_pools.c
libs/esl/: agc_cli.c
libs/esl/src/: esl.c
libs/esl/src/include/: esl.h
src/: agc.c  agc_api.c  agc_apr.c  agc_cache.c  agc_config.c  agc_connection.c  agc_core.c  agc_core_memory.c  agc_db.c  agc_driver.c  agc_dso.c  agc_event.c  agc_json.c  agc_log.c  agc_module.c  agc_mprintf.c  agc_odbc.c  agc_rbtree.c  agc_sctp.c  agc_sql.c  agc_time.c  agc_timer.c  agc_utils.c  configure.ac  demo.yml
src/include/: agc.h  agc_am_config.h.in  agc_api.h  agc_apr.h  agc_cache.h  agc_connection.h  agc_core.h  agc_db.h  agc_driver.h  agc_dso.h  agc_event.h  agc_json.h  agc_log.h  agc_memory.h  agc_module.h  agc_mprintf.h  agc_odbc.h  agc_platform.h  agc_rbtree.h  agc_sctp.h  agc_sql.h  agc_timer.h  agc_types.h  agc_utils.h  agc_version.h.in
src/include/private/: agc_core_pvt.h
src/mod/: Makefile.am
src/mod/caches/mod_redis/: Makefile.am  mod_redis.c
src/mod/dbs/mod_sqlite/: Makefile.am  mod_sqlite.c
src/mod/drivers/mod_epoll/: Makefile.am  mod_epoll.c
src/mod/eventhandlers/mod_eventsocket/: Makefile.am  eventsocket_conn.c  mod_eventsocket.c  mod_eventsocket.h
src/mod/loggers/mod_log/: Makefile.am
src/mod/loggers/mod_logfile/: Makefile.am  mod_logfile.c
src/mod/mqs/mod_rabbitmq/: Makefile.am  mod_rabbitmq.c  mod_rabbitmq.h  rabbitmq_consumer.c  rabbitmq_producer.c  rabbitmq_utils.c
src/mod/tests/mod_test/: Makefile.am  epoll_client.c  mod_test.c  mod_test.h  test_cache.c  test_db.c  test_db.sql  test_driver.c  test_event.c  test_mq.c  test_sql.c  test_timer.c
src/mod/tests/mod_test/client/: Makefile.am  README.txt  configure.in  epoll_clientip6.c  epoll_server.c
test/: README.md  modules.yml  yaml_config.c  yaml_parser.c
